==========
0.9
2025/10/27

* 加入了RSA加密功能

----------
alpha-3
2025/10/27

* 内核版本更新至0.8.2
* 加密界面更新：
    * 增加了分享按钮
    * 增加了覆盖生成密钥对时的警告
* 适配安卓16

----------
alpha-2
2022/12/31

* 内核版本更新至0.8.1
* RSA加密更新:
    * 密钥生成算法提速
    * 加入了十六进制密文
    * 增加了错误保护

----------
alpha-1
2022/12/30

* 加入了RSA加密功能

==========
0.8
2022/12/14

* 新增字典模式
* 主界面更新:
    * 新增底部导航栏
    * 修复了转入后台之后翻译结果消失的问题
    * 横屏支持
* 内核版本更新至0.7.8:
    * 新增Chinglish翻译
    * 新增单独查词模式
    * Geglish翻译优化: 对已知词组的优化
    * 字典更新
    * 修复了英文大小写敏感的问题

----------
beta-2
2022/12/14
* 内核更新:
    * Geglish翻译优化: 两个中文字对应同一个英文词时，重新查询这个词
    * 加入了一些特殊词汇，如窝窝屎

----------
beta-1
2022/12/09
* 修复了历史记录重新翻译时语言下拉框不还原的问题
* 修复了中文->Chinglish翻译时闪退的问题
* 词典:
    * 结果排序
    * 搜索所有包含用户输入的词组

----------
alpha-6
2022/12/07
* 词典: 加入了同音字

----------
alpha-5
2022/12/07
* 重写了view model，保证切屏时界面数据不消失
* 恢复了部分界面的横屏功能

==========
0.7-beta3
2022/11/26

* 新增设置页面:
    * App内界面语言选项
    * 将选词器移入设置界面
* 加入了给力语用户界面
* 界面优化:
    * 修复了一部分文本在长宽比较大的设备上溢出屏幕的问题
* 内核版本更新至0.6.2:
    * 构词法更新: 移除了从英文继承的各种变体，如---y的比较级变为---iest
    * 字典更新

==========
0.6.1
2022/11/21

* 字典更新: 针对世界杯参赛国家的优化

==========
0.6.0
2022/11/20

* 界面更新:
    * 界面图标化
    * 加入了关于页面
    * 加入了输入框的提示
* 历史记录界面优化:
    * 加入了日期分隔线
* 内核版本更新至0.6.0:
    * 语法更新: 复数，主格宾格
    * 代码结构优化
    * 字典更新
    * 调整了查词的顺序，略微提高了小字典同音字的优先级
    * 微调了【综合】选词器的权重

==========
0.5.2
2022/11/17

* 界面调整:
    * 微调了译文框的边线粗细
    * 选中下方译文框时自动收起虚拟键盘
* 内核版本更新至0.5.2:
    * 修复了特殊字符造成闪退的问题
    * 修改了与“的”相关的语法翻译
    * 修复了两个中文字翻译成一个英文词时发生的一些小问题
    * 字典机制更新
    * 字典更新

==========
0.5.0
2022/11/16

* 新特性:
    * 选中下方译文中的字词时，上方原文栏会高亮对应的内容
    * 加入了一键清空输入的快捷键
* 问题修复:
    * 禁用了横屏模式，反正本来就不好用
    * 替换了一些有问题的组件
* 内核版本更新至0.5.0:
    * 修改了翻译器的返回类型
    * 保留每个字对应的原文位置
    * 字典更新

==========
0.4.6
2022/11/15

* 修改了一些UI文本
* 加入了界面滚动条
* 内核版本更新至0.4.6:
    * 性能提升: 优化了数据结构，查询速度显著提升
    * 修复了乱加时态的问题

==========
0.4.4
2022/11/15

* 历史记录界面优化:
    * 新增中给段落对齐功能
    * 加入滚动条
* 主界面横屏支持
* 界面尺寸调整
* 修复了空白翻译也存入历史记录的问题
* 新增首次打开时的更新内容弹窗
* 内核版本更新至0.4.5:
    * 结构优化
    * 词典更新