@@ -20,9 +20,9 @@
             android:background="?attr/colorSurface"
             app:title="@string/history">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/manage_history_button"
-                style="@style/Widget.AppCompat.Button.Borderless"
+                style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
