@@ -1,9 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/clear_history_menu"
-        android:onClick="onClearHistoryClicked"
-        android:title="@string/clear">
-
-    </item>
-</menu>
