@@ -1,8 +1,15 @@
 ==========
 0.9
-2025/10/27
+2025/10/31
 
 * 加入了RSA加密功能
+* 适配Material 3界面风格
+
+----------
+alpha-4
+2025/10/31
+
+* 适配Material 3界面风格
 
 ----------
 alpha-3
